<resources>
    <string name="app_name">MyNotes</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="placeholder">Placeholder</string>
    <string name="luckyman">There is nothing here</string>
    <string name="redact">Redact</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="deadline">Deadline</string>
    <string name="priority">Priority</string>




</resources>
